{
  "version": 4,
  "terraform_version": "1.0.1",
  "serial": 77,
  "lineage": "cd3ae7bc-101b-37e1-b392-3d099157a98a",
  "resources": [
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:011232069112:internet-gateway/igw-05aceeb7ed6a82c53",
            "id": "igw-05aceeb7ed6a82c53",
            "owner_id": "011232069112",
            "tags": {
              "Name": "IGW"
            },
            "tags_all": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-065b04714b543ec52"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:011232069112:route-table/rtb-015370f5071582134",
            "id": "rtb-015370f5071582134",
            "owner_id": "011232069112",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05aceeb7ed6a82c53",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table for VPC"
            },
            "tags_all": {
              "Name": "Route Table for VPC"
            },
            "vpc_id": "vpc-065b04714b543ec52"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b97e3509552f444f",
            "route_table_id": "rtb-015370f5071582134",
            "subnet_id": "subnet-010f68a419e9e5766"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.igw.aws_route_table.rt",
            "module.subnet.aws_subnet.public_subnets",
            "module.subnet.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d06e8105ab0bd53",
            "route_table_id": "rtb-015370f5071582134",
            "subnet_id": "subnet-092024bb12237e235"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.igw.aws_route_table.rt",
            "module.subnet.aws_subnet.public_subnets",
            "module.subnet.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.manager_node",
      "mode": "managed",
      "type": "aws_instance",
      "name": "qa_manager_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0194c3e07668a7e36",
            "arn": "arn:aws:ec2:eu-west-2:011232069112:instance/i-0d81c0fd4942dd0b0",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d81c0fd4942dd0b0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b86dbf95cb33ba79",
            "private_dns": "ip-172-160-0-149.eu-west-2.compute.internal",
            "private_ip": "172.160.0.149",
            "public_dns": "ec2-35-176-105-32.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.176.105.32",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08269fd410d934da8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-010f68a419e9e5766",
            "tags": {
              "Name": "QA_Final_Project_Manager_Node"
            },
            "tags_all": {
              "Name": "QA_Final_Project_Manager_Node"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0208c6aa8eeda2337"
            ]
          },
          "dependencies": [
            "module.security_group.aws_security_group.qa_final_project_sg",
            "module.subnet.aws_subnet.public_subnets",
            "module.subnet.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "qa_final_project_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:011232069112:security-group/sg-0208c6aa8eeda2337",
            "description": "Allow SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0208c6aa8eeda2337",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "QAFinalProjectSG",
            "name_prefix": "",
            "owner_id": "011232069112",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-065b04714b543ec52"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:011232069112:subnet/subnet-010f68a419e9e5766",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.160.0.0/24",
            "id": "subnet-010f68a419e9e5766",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "011232069112",
            "tags": {
              "kubernetes.io/cluster/syed_cluster": "shared"
            },
            "tags_all": {
              "kubernetes.io/cluster/syed_cluster": "shared"
            },
            "vpc_id": "vpc-065b04714b543ec52"
          },
          "dependencies": [
            "module.subnet.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:011232069112:subnet/subnet-092024bb12237e235",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.160.1.0/24",
            "id": "subnet-092024bb12237e235",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "011232069112",
            "tags": {
              "kubernetes.io/cluster/syed_cluster": "shared"
            },
            "tags_all": {
              "kubernetes.io/cluster/syed_cluster": "shared"
            },
            "vpc_id": "vpc-065b04714b543ec52"
          },
          "dependencies": [
            "module.subnet.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:011232069112:vpc/vpc-065b04714b543ec52",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.160.0.0/16",
            "default_network_acl_id": "acl-0f7b2199f986438cc",
            "default_route_table_id": "rtb-0a082546461966b77",
            "default_security_group_id": "sg-0facf5145f65c18b2",
            "dhcp_options_id": "dopt-72d7eb1a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-065b04714b543ec52",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a082546461966b77",
            "owner_id": "011232069112",
            "tags": {
              "Name": "VPC_PROJECT"
            },
            "tags_all": {
              "Name": "VPC_PROJECT"
            }
          }
        }
      ]
    }
  ]
}